--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-I have finished reading this page and watching the videos that were available.
+I have finished reading this page and watching the videos that were available. It was very informative.
